releases/R2020b-test/templates/azuredeploy20b.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
      "location": {
        "type": "string",
        "defaultValue": "[resourceGroup().location]",
        "metadata": {
          "description": "Location Where the Template will be deployed"
        }
      },
      "Server VM Instance Size": {
        "type": "string",
        "defaultValue": "Standard_D2s_v3",
        "metadata": {
          "description": "Each VM instance will run multiple workers. Select a VM size that is appropriate for your needs. It is recommended that you choose a VM size where the number of cores on your VM match the number of workers per VM you plan on using."
        }
      },
      "instanceCount": {
        "type": "int",
        "defaultValue": 1,
        "metadata": {
          "description": "Number of VM instances (24 or less)."
        },
        "maxValue": 24,
        "minValue": 1
      },
      "adminUsername": {
        "type": "string",
        "metadata": {
          "description": "Admin username on all VMs."
        }
      },
      "adminPassword": {
        "type": "securestring",
        "metadata": {
          "description": "Admin password on all VMs."
        }
      },
      "Allow connections from": {
        "type": "string",
        "metadata": {
          "description": "String identifying the client CIDR or IP range which will be allowed to use the solution."
        }
      },
      "CreateAzureRedisCache": {
        "type": "string",
        "allowedValues": ["Yes", "No"],
        "defaultValue": "Yes",
        "metadata": {
          "description": "Specify whether you want to create an Azure Redis Cache that lets you use the persistence functionality on the server."
        }
      },
      "UsePublicIPAddresses": {
        "type": "string",
        "allowedValues": ["Yes", "No"],
        "defaultValue": "Yes",
        "metadata": {
          "description": "Specify whether you want to use public IP addresses and make your solution available over the Internet"
        }
      },
      "Platform": {
        "type": "string",
        "defaultValue": "Linux",
        "allowedValues": ["Windows", "Linux"],
        "metadata": {
          "description": "Select the operating system for the server."
        }
      },
      "DeployNetworkLicenseManagerforMATLAB": {
        "type": "string",
        "allowedValues": ["Yes", "No"],
        "defaultValue": "Yes",
        "metadata": {
          "description": "Specify whether you want to deploy the Network License Manager for MATLAB"
        }
      },
      "NewOrExistingVirtualNetwork": {
        "type": "string",
        "defaultValue": "new",
        "allowedValues": ["new", "existing"],
        "metadata": {
          "description": "Specify whether to create a new Virtual Network or use an existing one."
        }
      },
      "VirtualNetworkName": {
        "type": "string",
        "defaultValue": "mps-network",
        "metadata": {
          "description": "Name of your existing virtual network where you want to deploy this solution."
        }
      },
      "Subnet1": {
        "type": "string",
        "defaultValue": "default",
        "metadata": {
          "description": "Name of the subnet that will host the cloud console and other resources."
        }
      },
      "Subnet2": {
        "type": "string",
        "defaultValue": "appGwSubnet",
        "metadata": {
          "description": "Name of the subnet that will host the application gateway."
        }
      },
      "VirtualNetworkCIDRRange": {
        "type": "string",
        "defaultValue": "10.0.0.0/16",
        "metadata": {
          "description": "CIDR Range of the Virtaul Network."
        }
      },
      "Subnet1CIDRRange": {
        "type": "string",
        "defaultValue": "10.0.0.0/24",
        "metadata": {
          "description": "CIDR Range of the first subnet in the Virtual Network."
        }
      },
      "Subnet2CIDRRange": {
        "type": "string",
        "defaultValue": "10.0.1.0/24",
        "metadata": {
          "description": "CIDR Range of the second subnet in the Virtual Network."
        }
      },
      "AvailableSubnet2IPAddress": {
        "type": "string",
        "defaultValue": "10.0.1.4",
        "metadata": {
          "description": "Specify an unused IP address from Subnet 2. This IP address serves as the private IP of the application gateway."
        }
      },
      "ResourceGroupNameOfVirtualNetwork": {
        "type": "string",
        "defaultValue": "[resourceGroup().name]",
        "metadata": {
          "description": "Specify the resource group name of the virtual network"
        }
      }
    },
    "variables": {
      "AppGatewaySize": "Standard_v2",
      "AppGatewayCount": 1,
      "mpsDNSName": "[concat('mps',uniqueString( resourceGroup().id))]",
      "storageAccountName": "[concat('serverlog',uniqueString( resourceGroup().id))]",
      "storageAccountType": "Standard_LRS",
      "vmssName": "vmss1",
      "namingInfix": "[toLower(substring(concat(variables('vmssName'), uniqueString(resourceGroup().id)), 0, 9))]",
      "addressPrefix": "[parameters('VirtualNetworkCIDRRange')]",
      "subnetPrefix": "[parameters('Subnet1CIDRRange')]",
      "virtualNetworkName": "[parameters('VirtualNetworkName')]",
      "virtualNetworkApiVersion": "2018-08-01",
      "subnetName": "[parameters('Subnet1')]",
      "subnetRef": "[resourceId(variables('ResourceGroupNameOfVirtualNetwork'),'Microsoft.Network/virtualNetworks/subnets',variables('virtualNetworkName'),variables('subnetName'))]",
      "nicName": "[concat(variables('namingInfix'), 'nic')]",
      "ipConfigName": "[concat(variables('namingInfix'), 'ipconfig')]",
      "ResourceGroupNameOfVirtualNetwork": "[parameters('ResourceGroupNameOfVirtualNetwork')]",
      "virtualNetworkID": "[resourceId(variables('ResourceGroupNameOfVirtualNetwork'), 'Microsoft.Network/virtualNetworks',variables('virtualNetworkName'))]",
      "appGwPublicIPAddressName": "[concat(variables('namingInfix'), '-pip')]",
      "appGwName": "[concat(variables('namingInfix'), '-agw')]",
      "appGwPublicIPAddressID": "[resourceId('Microsoft.Network/publicIPAddresses',variables('appGwPublicIPAddressName'))]",
      "appGwSubnetName": "[parameters('Subnet2')]",
      "appGwSubnetPrefix": "[parameters('Subnet2CIDRRange')]",
      "appGwSubnetID": "[resourceId(variables('ResourceGroupNameOfVirtualNetwork'),'Microsoft.Network/virtualNetworks/subnets',variables('virtualNetworkName'),variables('appGwSubnetName'))]",
      "mpsHttpPortVar": 9910,
      "mpsFrontEndPort": 445,
      "appGwBePoolName": "[concat(variables('namingInfix'), 'appGwBepool')]",
      "networkSecurityGroupName": "[concat(variables('namingInfix'), '-rdp-nsg')]",
      "publicIPAddressNameMachine": "servermachine-public-ip",
      "redisCacheName": "[concat(variables('namingInfix'), 'redis')]",
      "redisenableNonSslPort": true,
      "redisCacheCapacity": 1,
      "redisCacheFamily": "C",
      "redisCacheSKU": "Standard",
      "appGWprivateIP": "[parameters('AvailableSubnet2IPAddress')]",
      "virtualNetworkNewOrExisting": "[parameters('NewOrExistingVirtualNetwork')]",
      "licservernicName": "servermachine-nic",
      "vmName": "servermachine",
      "publicIPprop1": {
        "id": "[resourceId('Microsoft.Network/publicIPAddresses',variables('publicIPAddressNameMachine'))]"
      },
      "frontendCertPassword": "x509",
      "frontendCertData": "MIIQeQIBAzCCED8GCSqGSIb3DQEHAaCCEDAEghAsMIIQKDCCBl8GCSqGSIb3DQEHBqCCBlAwggZMAgEAMIIGRQYJKoZIhvcNAQcBMBwGCiqGSIb3DQEMAQYwDgQI4matunPic3UCAggAgIIGGDID3/Msop2I9/1k1zGL79jvw5xP/TKd69zcR4USty/6vSBwBeoHAOv8JI5ttwxItUlmHzfHQg9hAf6n6QTiagIPNUQMnyd6dV5Bmdj/jRwk4T91lrprihuLKPsHucA5QCsZpoX+nvQxAEWIstaqPT+zvpG4MIo2pH4RmlgXh2jY0Iu0VgjZx7nShJgXDc/k1XbsQGTmFVRdwAoJqp45ulwYiGkodOkmDmAeBEIRtJWj5o+MAMWEPM+E02S5+xixiSBBqWpVChW4pmS1ykJD1wNyhFM/yWZbKRsu6yjOr/aKAZwkQNwOFlZatHO2lqgOQll4Hos5+ [...]
      "Platform": "[parameters('Platform')]",
      "WindowsSKUDisk1": "matlab-production-server-payg-master",
      "WindowsOfferDisk1": "matlab-production-server-payg-master",
      "WindowsSKUDisk2": "matlab-production-server-byol-windows",
      "WindowsOfferDisk2": "matlab-production-server-byol-windows",
      "LinuxSKUDisk1": "[variables('WindowsSKUDisk1')]",
      "LinuxOfferDisk1": "[variables('WindowsOfferDisk1')]",
      "LinuxSKUDisk2": "matlab-production-server-byol-linux",
      "LinuxOfferDisk2": "matlab-production-server-byol-linux",
      "WindowsDisk1Version": "2.0.1",
      "WindowsDisk2Version": "2.0.0",
      "LinuxDisk1Version": "[variables('WindowsDisk1Version')]",
      "LinuxDisk2Version": "2.0.0",
      "windowsScriptURL": "[uri(variables('_artifactsLocation'), concat('scriptScaleSet.ps1', variables('_artifactsLocationSasToken')))]",
      "linuxScriptURL": "[uri(variables('_artifactsLocation'), concat('scriptScaleSet.sh', variables('_artifactsLocationSasToken')))]",
      "masterVMScriptURL": "[uri(variables('_artifactsLocation'), concat('initMasterVM.sh', variables('_artifactsLocationSasToken')))]",
      "commandToExecuteWindows": "[concat('powershell -ExecutionPolicy Unrestricted -File scriptScaleSet.ps1 ' )]",
      "commandToExecuteLinux": "[concat('echo hello ' )]",
      "AppInsights-AppType": "Node.JS",
      "AppInsights-requestSource": "rest",
      "myAppInsightsInstanceName": "logs-apmservice",
      "contributor": "[concat('/subscriptions/', subscription().subscriptionId, '/providers/Microsoft.Authorization/roleDefinitions/', '81a9662b-bebf-436f-a333-f67b29880f12')]",
      "owner": "[concat('/subscriptions/', subscription().subscriptionId, '/providers/Microsoft.Authorization/roleDefinitions/', '8e3af657-a8ff-443c-a75c-2fe8c4bcb635')]",
      "should-deploy-flex": "[parameters('DeployNetworkLicenseManagerforMATLAB')]",
      "flex-arm-template-link": "https://raw.githubusercontent.com/mathworks-ref-arch/license-manager-for-matlab-on-azure/master/releases/R2020b/azuredeploy-existing-vnet-R2020b.json",
      "flex-parameters": {
        "instanceType": { "value": "Standard_D2s_v3" },
        "clientIPAddress": { "value": "[parameters('Allow connections from')]" },
        "Password": { "value": "[parameters('adminPassword')]" },
        "virtualNetworkResourceID": {
          "value": "[variables('virtualNetworkID')]"
        },
        "subnetName": { "value": "[variables('subnetName')]" }
      },
      "_artifactsLocation":"https://raw.githubusercontent.com/mathworks-ref-arch/matlab-production-server-on-azure/master/releases/R2020a/scripts/",
      "_artifactsLocationSasToken":"",
      "offerType": "BYOL",
      "providerID": "D36A3EDC-0566-4EE4-86D3-64F20D2DDA06"
    },
    "resources": [
      {
        "type": "Microsoft.Resources/deployments",
        "condition": "[equals(variables('should-deploy-flex'), 'Yes')]",
        "apiVersion": "2019-09-01",
        "name": "flex-lm-server",
        "dependsOn": [
          "[concat('Microsoft.Network/networkInterfaces/',variables('licservernicName'))]",
          "[concat('Microsoft.Network/virtualNetworks/',variables('virtualNetworkName'))]"
        ],
        "properties": {
          "mode": "Incremental",
          "templateLink": {
            "uri": "[variables('flex-arm-template-link')]",
            "contentVersion": "1.0.0.0"
          },
          "parameters": "[variables('flex-parameters')]"
        }
      },
      {
        "name": "[variables('networkSecurityGroupName')]",
        "type": "Microsoft.Network/networkSecurityGroups",
        "apiVersion": "2018-08-01",
        "location": "[parameters('location')]",
        "tags": {
          "Description": "Network Security Group to control access to resources",
          "provider": "[variables('providerID')]"
        },
        "properties": {
          "securityRules": [
            {
              "name": "default-allow-mps-port443",
              "properties": {
                "priority": 1000,
                "sourceAddressPrefix": "[parameters('Allow connections from')]",
                "protocol": "Tcp",
                "destinationPortRange": "9090",
                "access": "Allow",
                "direction": "Inbound",
                "sourcePortRange": "*",
                "destinationAddressPrefix": "*"
              }
            },
            {
              "name": "default-allow-mps-port9910",
              "properties": {
                "priority": 1001,
                "sourceAddressPrefix": "[parameters('Allow connections from')]",
                "protocol": "Tcp",
                "destinationPortRange": "*",
                "access": "Allow",
                "direction": "Inbound",
                "sourcePortRange": "*",
                "destinationAddressPrefix": "*"
              }
            },
            {
              "name": "default-allow-mps-port8000",
              "properties": {
                "priority": 1002,
                "sourceAddressPrefix": "[parameters('Allow connections from')]",
                "protocol": "Tcp",
                "destinationPortRange": "8000",
                "access": "Allow",
                "direction": "Inbound",
                "sourcePortRange": "*",
                "destinationAddressPrefix": "*"
              }
            },
            {
              "name": "default-allow-rdp",
              "properties": {
                "priority": 1003,
                "sourceAddressPrefix": "[parameters('Allow connections from')]",
                "protocol": "Tcp",
                "destinationPortRange": "3389",
                "access": "Allow",
                "direction": "Inbound",
                "sourcePortRange": "*",
                "destinationAddressPrefix": "*"
              }
            },
            {
              "name": "default-allow-appgw-traffic",
              "properties": {
                "priority": 1004,
                "sourceAddressPrefix": "*",
                "protocol": "*",
                "destinationPortRange": "65200-65535",
                "access": "Allow",
                "direction": "Inbound",
                "sourcePortRange": "*",
                "destinationAddressPrefix": "*"
              }
            }
          ]
        }
      },
      {
        "condition": "[equals(variables('virtualNetworkNewOrExisting'), 'new')]",
        "type": "Microsoft.Network/virtualNetworks",
        "name": "[variables('virtualNetworkName')]",
        "location": "[parameters('location')]",
        "dependsOn": [
          "[concat('Microsoft.Network/networkSecurityGroups/', variables('networkSecurityGroupName'))]"
        ],
        "apiVersion": "2018-08-01",
        "tags": {
          "Description": "Virtual network for the MATLAB Production Server deployment",
          "provider": "[variables('providerID')]"
        },
        "properties": {
          "addressSpace": {
            "addressPrefixes": ["[variables('addressPrefix')]"]
          },
          "subnets": [
            {
              "name": "[variables('subnetName')]",
              "properties": {
                "addressPrefix": "[variables('subnetPrefix')]",
                "networkSecurityGroup": {
                  "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroupName'))]"
                }
              }
            },
            {
              "name": "[variables('appGwSubnetName')]",
              "properties": {
                "addressPrefix": "[variables('appGwSubnetPrefix')]",
                "networkSecurityGroup": {
                  "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroupName'))]"
                }
              }
            }
          ]
        }
      },
      {
        "condition": "[equals(parameters('UsePublicIPAddresses'), 'Yes')]",
        "apiVersion": "2018-08-01",
        "type": "Microsoft.Network/publicIPAddresses",
        "sku": {
          "name": "Standard"
        },
        "name": "[variables('publicIPAddressNameMachine')]",
        "location": "[parameters('location')]",
        "tags": {
          "Description": "Public IP Address of the MATLAB Production Server Dashboard",
          "provider": "[variables('providerID')]"
        },
        "properties": {
          "publicIPAllocationMethod": "Static"
        }
      },
      {
        "apiVersion": "2018-08-01",
        "type": "Microsoft.Network/networkInterfaces",
        "name": "[variables('licservernicName')]",
        "location": "[parameters('location')]",
        "dependsOn": [
          "[if(equals(parameters('UsePublicIPAddresses'), 'Yes'), concat('Microsoft.Network/publicIPAddresses/', variables('publicIPAddressNameMachine')), concat('Microsoft.Network/networkSecurityGroups/', variables('networkSecurityGroupName')))]",
          "[concat('Microsoft.Network/virtualNetworks/',variables('virtualNetworkName'))]",
          "[concat('Microsoft.Network/applicationGateways/', variables('appGwName'))]"
        ],
        "tags": {
          "Description": "Network Interface Card (NIC) for the Admin VM",
          "provider": "[variables('providerID')]"
        },
        "properties": {
          "ipConfigurations": [
            {
              "name": "ipconfig1",
              "properties": {
                "privateIPAllocationMethod": "Dynamic",
                "publicIPAddress": "[if(equals(parameters('UsePublicIPAddresses'), 'Yes'), variables('publicIPprop1'), json('null'))]",
                "subnet": {
                  "id": "[variables('subnetRef')]"
                },
                "applicationGatewayBackendAddressPools": [
                  {
                    "id": "[resourceId('Microsoft.Network/applicationGateways/backendAddressPools',variables('appGwName'), 'dashboardbackend')]"
                  }
                ]
              }
            }
          ],
          "networkSecurityGroup": {
            "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroupName'))]"
          }
        }
      },
      {
        "apiVersion": "2018-10-01",
        "type": "Microsoft.Compute/virtualMachines",
        "name": "[variables('vmName')]",
        "tags": {
          "Description": "Virtual machine running the Admin Dashboard",
          "provider": "[variables('providerID')]"
        },
        "dependsOn": [
          "[concat('Microsoft.Network/networkInterfaces/',variables('licservernicName'))]",
          "[concat('Microsoft.Network/virtualNetworks/',variables('virtualNetworkName'))]",
          "[concat('Microsoft.Cache/Redis/',variables('redisCacheName'))]",
          "[concat('Microsoft.Storage/storageAccounts/',variables('storageAccountName'))]"
        ],
        "identity": {
          "type": "SystemAssigned"
        },
        "plan": {
          "name": "[if(equals(variables('Platform'), 'Windows'), variables('WindowsSKUDisk1'),  variables('LinuxSKUDisk1'))]",
          "publisher": "mathworks-inc",
          "product": "[if(equals(variables('Platform'), 'Windows'), variables('WindowsOfferDisk1'),  variables('LinuxOfferDisk1'))]"
        },
        "location": "[parameters('location')]",
        "properties": {
          "hardwareProfile": {
            "vmSize": "Standard_D1_v2"
          },
          "osProfile": {
            "computerName": "[variables('vmName')]",
            "adminUsername": "[parameters('adminUsername')]",
            "adminPassword": "[parameters('adminPassword')]"
          },
          "storageProfile": {
            "imageReference": {
              "publisher": "mathworks-inc",
              "offer": "[if(equals(variables('Platform'), 'Windows'), variables('WindowsOfferDisk1'),  variables('LinuxOfferDisk1'))]",
              "sku": "[if(equals(variables('Platform'), 'Windows'), variables('WindowsSKUDisk1'),  variables('LinuxSKUDisk1'))]",
              "version": "[if(equals(variables('Platform'), 'Windows'), variables('WindowsDisk1Version'),  variables('LinuxDisk1Version'))]"
            },
            "osDisk": {
              "createOption": "fromImage",
              "managedDisk": {
                "storageAccountType": "Standard_LRS"
              }
            }
          },
          "networkProfile": {
            "networkInterfaces": [
              {
                "id": "[resourceId('Microsoft.Network/networkInterfaces',variables('licservernicName'))]"
              }
            ]
          }
        },
        "resources": [
          {
            "apiVersion": "2018-10-01",
            "type": "extensions",
            "name": "config-app",
            "location": "[parameters('location')]",
            "dependsOn": [
              "[concat('Microsoft.Compute/virtualMachines/', variables('vmName'))]"
            ],
            "tags": {
              "displayName": "config-app",
              "provider": "[variables('providerID')]"
            },
            "properties": {
              "publisher": "Microsoft.Azure.Extensions",
              "type": "CustomScript",
              "typeHandlerVersion": "2.0",
              "autoUpgradeMinorVersion": true,
              "settings": {
                "skipDos2Unix": false,
                "timestamp": 123456789
              },
              "protectedSettings": {
                "commandToExecute": "[concat('sudo ./initMasterVM.sh ', variables('storageAccountName'), ' ', listKeys(variables('storageAccountName'), '2016-12-01').keys[0].value, ' ', 'mydbConnection', ' ', if(equals(parameters('UsePublicIPAddresses'), 'Yes'), concat('https://',reference(variables('appGwPublicIPAddressName')).dnsSettings.fqdn), concat('https://',variables('appGWprivateIP'),':444')), ' ', reference(variables('subnetRef'), variables('virtualNetworkApiVersion')).addressPrefix  ,  [...]
                "fileUris": ["[variables('masterVMScriptURL')]"]
              }
            }
          }
        ]
      },
      {
        "type": "Microsoft.Network/publicIPAddresses",
        "sku": {
          "name": "Standard"
        },
        "name": "[variables('appGwPublicIPAddressName')]",
        "location": "[parameters('location')]",
        "apiVersion": "2018-08-01",
        "properties": {
          "publicIPAllocationMethod": "Static",
          "dnsSettings": {
            "domainNameLabel": "[variables('mpsDNSName')]"
          }
        },
        "tags": {
          "Description": "Application Gateway public IP",
          "provider": "[variables('providerID')]"
        }
      },
      {
        "type": "Microsoft.Network/applicationGateways",
        "name": "[variables('appGwName')]",
        "location": "[parameters('location')]",
        "apiVersion": "2018-10-01",
        "dependsOn": [
          "[concat('Microsoft.Network/virtualNetworks/', variables('virtualNetworkName'))]",
          "[concat('Microsoft.Network/publicIPAddresses/', variables('appGwPublicIPAddressName'))]"
        ],
        "tags": {
          "Description": "Application Gateway",
          "provider": "[variables('providerID')]"
        },
        "properties": {
          "sku": {
            "name": "[variables('AppGatewaySize')]",
            "tier": "Standard_v2",
            "capacity": "[variables('AppGatewayCount')]"
          },
          "sslCertificates": [
            {
              "name": "appGatewayFrontEndSslCert",
              "properties": {
                "data": "[variables('frontendCertData')]",
                "password": "[variables('frontendCertPassword')]"
              }
            }
          ],
          "gatewayIPConfigurations": [
            {
              "name": "appGwIpConfig",
              "properties": {
                "subnet": {
                  "id": "[variables('appGwSubnetID')]"
                }
              }
            }
          ],
          "frontendIPConfigurations": [
            {
              "name": "appGwFrontendPublicIP",
              "properties": {
                "PublicIPAddress": {
                  "id": "[variables('appGwPublicIPAddressID')]"
                }
              }
            },
            {
              "name": "appGwFrontendPrivateIP",
              "properties": {
                "privateIPAddress": "[variables('appGWprivateIP')]",
                "privateIPAllocationMethod": "Static",
                "subnet": {
                  "id": "[variables('appGwSubnetID')]"
                }
              }
            }
          ],
          "frontendPorts": [
            {
              "name": "mpsHttpPort",
              "properties": {
                "Port": "[variables('mpsFrontEndPort')]"
              }
            },
            {
              "name": "mpsHttpPort2",
              "properties": {
                "Port": 444
              }
            },
            {
              "name": "dummyPort",
              "properties": {
                "Port": 449
              }
            },
            {
              "name": "port_445",
              "properties": {
                "port": 443
              }
            }
          ],
          "backendAddressPools": [
            {
              "name": "[variables('appGwBePoolName')]"
            },
            {
              "name": "dashboardbackend",
              "properties": {}
            }
          ],
          "backendHttpSettingsCollection": [
            {
              "name": "appGwBackendMPSHttpSettings",
              "properties": {
                "Port": "[variables('mpsHttpPortVar')]",
                "Protocol": "Http",
                "requestTimeout": 300,
                "CookieBasedAffinity": "Enabled",
                "probe": {
                  "id": "[resourceId('Microsoft.Network/applicationGateways/probes',variables('appGwName'), 'mpsfileprobe')]"
                }
              }
            },
            {
              "name": "dashboardbackend",
              "properties": {
                "port": 9090,
                "protocol": "Http",
                "cookieBasedAffinity": "Disabled",
                "pickHostNameFromBackendAddress": true,
                "affinityCookieName": "ApplicationGatewayAffinity",
                "requestTimeout": 20,
                "probe": {
                  "id": "[resourceId('Microsoft.Network/applicationGateways/probes',variables('appGwName'), 'dashboardHealth')]"
                }
              }
            }
          ],
          "httpListeners": [
            {
              "name": "MPSGwHttpListener",
              "properties": {
                "FrontendIPConfiguration": {
                  "Id": "[resourceId('Microsoft.Network/applicationGateways/frontendIPConfigurations', variables('appGwName') ,'appGwFrontendPublicIP')]"
                },
                "FrontendPort": {
                  "Id": "[resourceId('Microsoft.Network/applicationGateways/frontendPorts', variables('appGwName'), 'mpsHttpPort')]"
                },
                "Protocol": "Https",
                "SslCertificate": {
                  "Id": "[resourceId('Microsoft.Network/applicationGateways/sslCertificates',variables('appGwName'), 'appGatewayFrontEndSslCert')]"
                }
              }
            },
            {
              "name": "MPSGwPrivateHttpListener",
              "properties": {
                "FrontendIPConfiguration": {
                  "Id": "[resourceId('Microsoft.Network/applicationGateways/frontendIPConfigurations',variables('appGwName'), 'appGwFrontendPrivateIP')]"
                },
                "FrontendPort": {
                  "Id": "[resourceId('Microsoft.Network/applicationGateways/frontendPorts',variables('appGwName'),'mpsHttpPort2')]"
                },
                "Protocol": "Https",
                "SslCertificate": {
                  "Id": "[resourceId('Microsoft.Network/applicationGateways/sslCertificates',variables('appGwName'),'appGatewayFrontEndSslCert')]"
                }
              }
            },
            {
              "name": "MPSGwDummyHttpListener",
              "properties": {
                "FrontendIPConfiguration": {
                  "Id": "[resourceId('Microsoft.Network/applicationGateways/frontendIPConfigurations',variables('appGwName'), 'appGwFrontendPrivateIP')]"
                },
                "FrontendPort": {
                  "Id": "[resourceId('Microsoft.Network/applicationGateways/frontendPorts',variables('appGwName'),'dummyPort')]"
                },
                "Protocol": "Https",
                "SslCertificate": {
                  "Id": "[resourceId('Microsoft.Network/applicationGateways/sslCertificates',variables('appGwName'),'appGatewayFrontEndSslCert')]"
                }
              }
            },
            {
              "name": "mainentrypoint",
              "properties": {
                "frontendIPConfiguration": {
                  "Id": "[resourceId('Microsoft.Network/applicationGateways/frontendIPConfigurations',variables('appGwName'), 'appGwFrontendPublicIP')]"
                },
                "frontendPort": {
                  "Id": "[resourceId('Microsoft.Network/applicationGateways/frontendPorts',variables('appGwName'),'port_445')]"
                },
                "protocol": "Https",
                "sslCertificate": {
                  "Id": "[resourceId('Microsoft.Network/applicationGateways/sslCertificates',variables('appGwName'),'appGatewayFrontEndSslCert')]"
                },
                "requireServerNameIndication": false
              }
            }
          ],
          "urlPathMaps": [
            {
              "name": "mainpath",
              "properties": {
                "defaultBackendAddressPool": {
                  "id": "[resourceId('Microsoft.Network/applicationGateways/backendAddressPools',variables('appGwName'), variables('appGwBePoolName'))]"
                },
                "defaultBackendHttpSettings": {
                  "id": "[resourceId('Microsoft.Network/applicationGateways/backendHttpSettingsCollection',variables('appGwName'), 'appGwBackendMPSHttpSettings')]"
                },
                "pathRules": [
                  {
                    "name": "dashboard",
                    "properties": {
                      "paths": ["/dashboard/*", "/dashboard"],
                      "backendAddressPool": {
                        "id": "[resourceId('Microsoft.Network/applicationGateways/backendAddressPools',variables('appGwName'), 'dashboardbackend')]"
                      },
                      "backendHttpSettings": {
                        "id": "[resourceId('Microsoft.Network/applicationGateways/backendHttpSettingsCollection',variables('appGwName'), 'dashboardbackend')]"
                      }
                    }
                  }
                ]
              }
            }
          ],
          "requestRoutingRules": [
            {
              "name": "mainpathPrivate",
              "properties": {
                "ruleType": "PathBasedRouting",
                "httpListener": {
                  "id": "[resourceId('Microsoft.Network/applicationGateways/httpListeners',variables('appGwName'), 'MPSGwPrivateHttpListener')]"
                },
                "urlPathMap": {
                  "id": "[resourceId('Microsoft.Network/applicationGateways/urlPathMaps',variables('appGwName'), 'mainpath')]"
                }
              }
            },
            {
              "name": "mainpath",
              "properties": {
                "ruleType": "PathBasedRouting",
                "httpListener": {
                  "id": "[if(equals(parameters('UsePublicIPAddresses'), 'Yes'),resourceId('Microsoft.Network/applicationGateways/httpListeners',variables('appGwName'), 'mainentrypoint'),  resourceId('Microsoft.Network/applicationGateways/httpListeners',variables('appGwName'), 'MPSGwDummyHttpListener') )]"
                },
                "urlPathMap": {
                  "id": "[resourceId('Microsoft.Network/applicationGateways/urlPathMaps',variables('appGwName'), 'mainpath')]"
                }
              }
            }
          ],
          "probes": [
            {
              "name": "mpsfileprobe",
              "properties": {
                "protocol": "Http",
                "host": "127.0.0.1",
                "path": "/~files/hello.html",
                "interval": 30,
                "timeout": 30,
                "unhealthyThreshold": 3
              }
            },
            {
              "name": "dashboardHealth",
              "properties": {
                "protocol": "Http",
                "host": "127.0.0.1",
                "path": "/dashboard/index.html",
                "interval": 30,
                "timeout": 30,
                "unhealthyThreshold": 3,
                "pickHostNameFromBackendHttpSettings": false,
                "minServers": 0
              }
            }
          ]
        }
      },
      {
        "type": "Microsoft.Compute/virtualMachineScaleSets",
        "name": "[variables('namingInfix')]",
        "location": "[parameters('location')]",
        "apiVersion": "2018-10-01",
        "identity": {
          "type": "SystemAssigned"
        },
        "dependsOn": [
          "[concat('Microsoft.Network/virtualNetworks/', variables('virtualNetworkName'))]",
          "[concat('Microsoft.Network/applicationGateways/', variables('appGwName'))]"
        ],
        "tags": {
          "Description": "VM Scale set that controls how many instances are running",
          "provider": "[variables('providerID')]"
        },
        "sku": {
          "name": "[parameters('Server VM Instance Size')]",
          "tier": "Standard",
          "capacity": "[parameters('instanceCount')]"
        },
        "plan": {
          "name": "[if(equals(variables('Platform'), 'Windows'), variables('WindowsSKUDisk2'),  variables('LinuxSKUDisk2'))]",
          "publisher": "mathworks-inc",
          "product": "[if(equals(variables('Platform'), 'Windows'), variables('WindowsOfferDisk2'),  variables('LinuxOfferDisk2'))]"
        },
        "properties": {
          "overprovision": "true",
          "upgradePolicy": {
            "mode": "Manual"
          },
          "virtualMachineProfile": {
            "storageProfile": {
              "imageReference": {
                "publisher": "mathworks-inc",
                "offer": "[if(equals(variables('Platform'), 'Windows'), variables('WindowsOfferDisk2'),  variables('LinuxOfferDisk2'))]",
                "sku": "[if(equals(variables('Platform'), 'Windows'), variables('WindowsSKUDisk2'),  variables('LinuxSKUDisk2'))]",
                "version": "[if(equals(variables('Platform'), 'Windows'), variables('WindowsDisk2Version'),  variables('LinuxDisk2Version'))]"
              },
              "osDisk": {
                "createOption": "fromImage",
                "managedDisk": {
                  "storageAccountType": "Standard_LRS"
                }
              }
            },
            "osProfile": {
              "computerNamePrefix": "[variables('namingInfix')]",
              "adminUsername": "[parameters('adminUsername')]",
              "adminPassword": "[parameters('adminPassword')]"
            },
            "networkProfile": {
              "networkInterfaceConfigurations": [
                {
                  "name": "[variables('nicName')]",
                  "properties": {
                    "primary": "true",
                    "ipConfigurations": [
                      {
                        "name": "[variables('ipConfigName')]",
                        "properties": {
                          "subnet": {
                            "id": "[variables('subnetRef')]"
                          },
                          "ApplicationGatewayBackendAddressPools": [
                            {
                              "id": "[resourceId('Microsoft.Network/applicationGateways/backendAddressPools',variables('appGwName'), variables('appGwBePoolName'))]"
                            }
                          ]
                        }
                      }
                    ]
                  }
                }
              ]
            },
            "extensionProfile": {
              "extensions": [
                {
                  "name": "[concat(variables('vmssName'), 'SetEnvironmentVar')]",
                  "properties": {
                    "publisher": "[if(equals(variables('Platform'), 'Windows'), 'Microsoft.Compute', 'Microsoft.Azure.Extensions')]",
                    "forceUpdateTag": "1",
                    "type": "[if(equals(variables('Platform'), 'Windows'), 'CustomScriptExtension', 'CustomScript')]",
                    "typeHandlerVersion": "[if(equals(variables('Platform'), 'Windows'), '1.9', '2.0')]",
                    "autoUpgradeMinorVersion": true,
                    "settings": {
                      "fileUris": [
                        "[if(equals(variables('Platform'), 'Windows'), variables('windowsScriptURL'), variables('linuxScriptURL'))]"
                      ]
                    },
                    "protectedSettings": {
                      "commandToExecute": "[if(equals(variables('Platform'), 'Windows'), variables('commandToExecuteWindows'), variables('commandToExecuteLinux'))]"
                    }
                  }
                }
              ]
            }
          }
        }
      },
      {
        "name": "[variables('storageAccountName')]",
        "type": "Microsoft.Storage/storageAccounts",
        "apiVersion": "2019-06-01",
        "location": "[parameters('location')]",
        "tags": {
          "Description": "Storage account that stores application and config files",
          "provider": "[variables('providerID')]"
        },
        "sku": {
          "name": "[variables('storageAccountType')]"
        },
        "kind": "storage",
        "properties": {}
      },
      {
        "condition": "[equals(parameters('CreateAzureRedisCache'), 'Yes')]",
        "apiVersion": "2019-07-01",
        "name": "[variables('redisCacheName')]",
        "tags": {
          "Description": "Azure Cache for Redis to store persistence data",
          "provider": "[variables('providerID')]"
        },
        "type": "Microsoft.Cache/Redis",
        "location": "[parameters('location')]",
        "properties": {
          "enableNonSslPort": "[variables('redisenableNonSslPort')]",
          "sku": {
            "capacity": "[variables('redisCacheCapacity')]",
            "family": "[variables('redisCacheFamily')]",
            "name": "[variables('redisCacheSKU')]"
          }
        }
      },
      {
        "type": "microsoft.insights/components",
        "apiVersion": "2018-05-01-preview",
        "tags": {
          "Description": "Application Insights instance that stores solution logs",
          "provider": "[variables('providerID')]"
        },
        "name": "[variables('myAppInsightsInstanceName')]",
        "location": "[parameters('location')]",
        "properties": {
          "ApplicationId": "[variables('myAppInsightsInstanceName')]",
          "Application_Type": "[variables('AppInsights-AppType')]",
          "Flow_Type": "Redfield",
          "Request_Source": "[variables('AppInsights-requestSource')]"
        }
      },
      {
        "apiVersion": "2016-07-01",
        "name": "[concat(variables('storageAccountName'),'/Microsoft.Authorization/',guid(resourceGroup().id, deployment().name,'12'))]",
        "type": "Microsoft.Storage/storageAccounts/providers/roleAssignments",
        "properties": {
          "roleDefinitionId": "[variables('contributor')]",
          "principalId": "[reference(resourceId('Microsoft.Compute/virtualMachines', variables('vmName')),'2018-10-01', 'Full').identity.principalId]",
          "scope": "[resourceId('Microsoft.Storage/storageAccounts',variables('storageAccountName'))]"
        },
        "dependsOn": [
          "[concat('Microsoft.Storage/storageAccounts/',variables('storageAccountName'))]",
          "[concat('Microsoft.Storage/storageAccounts/',variables('storageAccountName'))]"
        ]
      },
      {
        "apiVersion": "2016-07-01",
        "name": "[concat(variables('storageAccountName'),'/Microsoft.Authorization/', guid(resourceGroup().id, deployment().name,'16'))]",
        "type": "Microsoft.Storage/storageAccounts/providers/roleAssignments",
        "properties": {
          "roleDefinitionId": "[variables('contributor')]",
          "principalId": "[reference(resourceId('Microsoft.Compute/virtualMachineScaleSets', variables('namingInfix')),'2018-10-01', 'Full').identity.principalId]",
          "scope": "[resourceId('Microsoft.Storage/storageAccounts',variables('storageAccountName'))]"
        },
        "dependsOn": [
          "[concat('Microsoft.Storage/storageAccounts/',variables('storageAccountName'))]",
          "[concat('Microsoft.Storage/storageAccounts/',variables('storageAccountName'))]"
        ]
      },
      {
        "apiVersion": "2016-07-01",
        "condition": "[equals(parameters('CreateAzureRedisCache'), 'Yes')]",
        "name": "[concat(variables('redisCacheName'),'/Microsoft.Authorization/', guid(resourceGroup().id, deployment().name,'22'))]",
        "type": "Microsoft.Cache/Redis/providers/roleAssignments",
        "properties": {
          "roleDefinitionId": "[variables('owner')]",
          "principalId": "[reference(resourceId('Microsoft.Compute/virtualMachines', variables('vmName')),'2018-10-01', 'Full').identity.principalId]",
          "scope": "[resourceId('Microsoft.Cache/Redis',variables('redisCacheName'))]"
        },
        "dependsOn": [
          "[concat('Microsoft.Storage/storageAccounts/',variables('storageAccountName'))]",
          "[concat('Microsoft.Cache/Redis/',variables('redisCacheName'))]",
          "[concat('Microsoft.Storage/storageAccounts/',variables('storageAccountName'))]"
        ]
      },
      {
        "name": "[concat('pid-', toLower(variables('providerID')))]",
        "apiVersion": "2019-09-01",
        "type": "Microsoft.Resources/deployments",
        "properties": {
          "mode": "Incremental",
          "template": {
            "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
            "contentVersion": "1.0.0.0",
            "resources": []
          }
        }
      }
    ],
    "outputs": {
      "dashboardURL": {
        "value": "[if(equals(parameters('UsePublicIPAddresses'), 'Yes'), concat('https://',reference(variables('appGwPublicIPAddressName')).dnsSettings.fqdn,'/dashboard'), concat('https://',variables('appGWprivateIP'),':444', '/dashboard'))]",
        "type": "string"
      },
      "networkLicenseManagerURL": {
        "value": "[if(equals(variables('should-deploy-flex'), 'Yes'), reference('flex-lm-server').outputs.NetworkLicenseManagerAddress.value, 'none')]",
        "type": "string"
      },
      "MATLABExecutionEndpoint": {
        "value": "[if(equals(parameters('UsePublicIPAddresses'), 'Yes'), concat('https://',reference(variables('appGwPublicIPAddressName')).dnsSettings.fqdn), concat('https://',variables('appGWprivateIP'),':444'))]",
        "type": "string"
      }
    }
  }
